添加用户登录信息查询

--- a/SharingPlatform/src/main/webapp/views/demand/editApply.html
+++ b/SharingPlatform/src/main/webapp/views/demand/editApply.html
@@ -40,8 +40,8 @@
 		<dd style="height: 63px;"><textarea rows="3" id="demandUse" placeholder="请输入用途"></textarea></dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
 		<dd>
-			<a class="subA" href="javascript:" onclick="creatAssParam();" style="position:absolute;width: 20%;">保存草稿</a>  
-			<a class="subA" href="javascript:" onclick="creatAssParam();" style="position:absolute;width: 20%; right:40% ">提交</a>  
-			<a class="subA" href="javascript:" onclick="creatAssParam();" style="position:absolute;width: 20%;right: 30px;">取消</a>  
+			<a class="subA" href="javascript:" onclick="editApply('00');" style="position:absolute;width: 20%;">保存草稿</a>  
+			<a class="subA" href="javascript:" onclick="editApply('01');" style="position:absolute;width: 20%; right:40% ">提交</a>  
+			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%;right: 30px;">取消</a>  
 		</dd>
 	</dl>
