修复列表查询点击搜索时报错问题

--- a/SharingPlatform/src/main/webapp/static/css/table.css
+++ b/SharingPlatform/src/main/webapp/static/css/table.css
@@ -13,6 +13,10 @@
 	background-color: #FFFFFF;
 }
 
+.ui-jqgrid{
+	background-color: #FFFFFF;
+}
+
 tr .ui-th-column{
 	background-color: #F1F1F1;
 }
