--- a/SharingPlatform/src/main/webapp/views/demand/apply.html
+++ b/SharingPlatform/src/main/webapp/views/demand/apply.html
@@ -27,7 +27,7 @@
 		</div>
 		<div style="left:950px;">
 			<a class="btn btn-primary" href="javascript:" onclick="searchApply();" ><i class="fa fa-plus"></i>搜  索</a>
-			<a class="btn btn-primary" href="javascript:" onclick="editApplyPage('add');" ><i class="fa fa-pencil-square-o"></i>添  加</a>
+			<a class="btn btn-primary" href="javascript:" onclick="editApplyPage('add','');" ><i class="fa fa-pencil-square-o"></i>添  加</a>
 		</div>
 <!-- 		<div style="left:960px;"> -->
 <!-- 			<a v-if="hasPermission('puborgan:save')" class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>搜  索</a> -->
