--- a/SharingPlatform/src/main/webapp/views/demand/firstTrial.html
+++ b/SharingPlatform/src/main/webapp/views/demand/firstTrial.html
@@ -32,7 +32,7 @@
 			<input id="ft_endDate" name="ft_endDate" class="Wdate" readonly="readonly"/>
 		</div>
 		<div style="left:950px;">
-			<a class="btn btn-primary" href="javascript:" onclick="searchApply();" ><i class="fa fa-plus"></i>搜  索</a>
+			<a class="btn btn-primary" href="javascript:" onclick="searchTrial();" ><i class="fa fa-plus"></i>搜  索</a>
 		</div>
 
 	</div>
