查询页面主要 信息已添加

--- a/SharingPlatform/src/main/webapp/static/css/popup.css
+++ b/SharingPlatform/src/main/webapp/static/css/popup.css
@@ -74,6 +74,17 @@
 	line-height:30px; 
 	height:30px; 
 	font-size:16px;
+	background-color:#2A82E4;
+	color:#2A82E4;
+	font-weight: bold;
+}
+
+.PassWordBack dl .groud_tital{
+	position: relative;
+	padding-left: 10px;
+	line-height:30px; 
+	height:30px; 
+	font-size:16px;
 	background-color:#E0EAF5;
 	color:#2A82E4;
 	font-weight: bold;
