--- a/SharingPlatform/src/main/webapp/views/demand/apply.html
+++ b/SharingPlatform/src/main/webapp/views/demand/apply.html
@@ -25,7 +25,7 @@
 		<div style="left:850px;width:110px;">
 			<input id="endDate" name="endDate" class="Wdate" readonly="readonly"/>
 		</div>
-		<div style="left:950px;">
+		<div style="left:950px;width:200px;">
 			<a class="btn btn-primary" href="javascript:" onclick="searchApply();" ><i class="fa fa-plus"></i>搜  索</a>
 			<a class="btn btn-primary" href="javascript:" onclick="editApplyPage('add','');" ><i class="fa fa-pencil-square-o"></i>添  加</a>
 		</div>
