--- a/SharingPlatform/src/main/webapp/views/demand/revokeDemand.html
+++ b/SharingPlatform/src/main/webapp/views/demand/revokeDemand.html
@@ -1,6 +1,6 @@
 <meta name="content-type" content="text/html; charset=UTF-8">
 	
-	<script type="text/javascript" src="views/demand/demandDetail.js?v=1"></script>
+	<script type="text/javascript" src="views/demand/revokeDemand.js?v=1"></script>
 	
 	<dl align="left" style="height: 30px;">
 		<dd id="page_tital" class="page_tital"></dd>
@@ -46,7 +46,8 @@
 		</dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
 		<dd>
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:40% ">关闭</a>  
+			<a class="subA" href="javascript:" onclick="revDem();" style="position:absolute;width: 20%; left: 20%; ">提交</a>  
+			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%;right: 20%;">取消</a>  
 		</dd>
 		<dd class="cut-offRule" ></dd>
 	</dl>
