--- a/SharingPlatform/src/main/webapp/views/demand/apply.html
+++ b/SharingPlatform/src/main/webapp/views/demand/apply.html
@@ -25,14 +25,15 @@
 		<div style="left:850px;width:110px;">
 			<input id="endDate" name="endDate" class="Wdate" readonly="readonly"/>
 		</div>
-		<div style="left:950px;width:200px;">
-			<a class="btn btn-primary" href="javascript:" onclick="searchApply();" ><i class="fa fa-plus"></i>搜  索</a>
-			<a class="btn btn-primary" href="javascript:" onclick="editApplyPage('add','');" ><i class="fa fa-pencil-square-o"></i>添  加</a>
+		<div style="left:950px;">
+			<a class="btn btn-primary" href="javascript:" onclick="searchApply();" >搜  索</a>
 		</div>
-<!-- 		<div style="left:960px;"> -->
-<!-- 			<a v-if="hasPermission('puborgan:save')" class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>搜  索</a> -->
-<!-- 			<a v-if="hasPermission('puborgan:update')" class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>添  加</a> -->
-<!-- 		</div> -->
+		<div style="left:1050px;">
+			<a class="btn btn-primary" href="javascript:" onclick="editApplyPage('add','');" >添加申请</a>
+		</div>
+		<div style="left:1150px;">
+			<a class="btn btn-primary" href="javascript:" onclick="importDemand();" >导入申请</a>
+		</div>
 	</div>
 	<div class="gridPanel">
 	    <table id="applyGrid"></table>
