--- a/SharingPlatform/src/main/webapp/views/demand/editApply.html
+++ b/SharingPlatform/src/main/webapp/views/demand/editApply.html
@@ -5,39 +5,43 @@
     <dl align="left">
     	<dd id="page_tital" class="page_tital">申请</dd>
 		<dd class="cut-offRule" ></dd>
-		<dd class="tital">
-			<font class="redStart">*</font><font style="left:40px;">信息资源提供部门</font>
-			<font class="redStart" style="left:330px;">*</font><font style="left:340px;">需求名称</font>
+		<dd>
+			<font class="redStart">*</font><font style="left:40px;">信息资源提供部门：</font>
+			<input id="proDepIdEdit" style="display:none;width: 675px;" readonly="readonly" placeholder="请选择部门"/>
+			<input id="proDepNameEdit" style="left:170px;width: 675px;" readonly="readonly" placeholder="请选择部门"/>
 		</dd>
-		<dd style="position: relative;">
-			<input id="proDepIdEdit" style="display:none;width: 40%;" readonly="readonly" placeholder="请选择部门"/>
-			<input id="proDepNameEdit" style="width: 40%;" readonly="readonly" placeholder="请选择部门"/>
-			<input id="demandName" style="position:absolute;width: 40%;left:330px;" type="text" placeholder="请输入需求名称"/>
+		<dd>
+			<font class="redStart">*</font><font style="left:40px;">需求名称：</font>
+			<input id="demandName" style="left:170px;width: 675px;" type="text" placeholder="请输入需求名称"/>
 		</dd>
 <!-- 		<dd class="cut-offRule" ></dd> -->
-<!-- 		<dd class="tital"><font style="width: 10px;color: red;">*</font><font style="left:40px;">需求名称</font></dd> -->
-<!-- 		<dd style="position: relative;"><input id="demandName" type="text" placeholder="请输入需求名称"/></dd> -->
-		<dd class="cut-offRule" ></dd>
-		<dd class="tital"><font>资源匹配关键字（多个关键字请用中文逗号“，”分割，最多填写5个关键字）</font></dd>
-		<dd style="position: relative;">
-			<input id="keyWord" type="text" placeholder="适当的关键字可以更准确的匹配资源" style="width:450px;"/>
-			<a id="captchaBut" class="but" href="javascript:" onclick="getCaptcha();" style="width:80px;position: absolute;left:490px;">匹配资源</a>
+		<dd>
+			<font>资源匹配关键字：</font>
+			<input id="keyWord" type="text" style="left:170px;width:590px;" placeholder="多个关键字请用中文逗号“，”分割，最多填写5个关键字,适当的关键字可以更准确的匹配资源"/>
+			<a id="captchaBut" class="but" href="javascript:" onclick="getCaptcha();" style="width:80px;position: absolute;left:765px;">匹配资源</a>
 		</dd>
-		<dd class="cut-offRule" ></dd>
-		<dd class="tital"><font class="redStart">*</font><font style="left:40px;">需求内容（须细化到数据项）</font></dd>
-		<dd style="height: 63px;"><textarea rows="3" id="demantDetail" placeholder="请输入需求内容（须细化到数据项）"></textarea></dd>
-		<dd class="cut-offRule" ></dd>
-		<dd class="tital">
-			<font class="redStart">*</font><font style="left:40px;">期望提供方式</font>
-			<font class="redStart" style="left:330px;">*</font><font style="left:340px;">期望共享服务方式</font>
+<!-- 		<dd class="cut-offRule" ></dd> -->
+		<dd style="height: 70px;">
+			<font style="height: 50px;" class="redStart">*</font><font style="left:40px;height: 50px;">需求内容：<br>（须细化到数据项）</font>
+			<textarea style="left:170px;width: 675px;"  rows="3" id="demantDetail" placeholder="请输入需求内容（须细化到数据项）"></textarea>
 		</dd>
-		<dd ><select id="accessMode" style="width: 40%;"></select><select id="serveMode" style="position:absolute;width: 40%;left:330px;"></select></dd>
-		<dd class="cut-offRule" ></dd>
-		<dd class="tital"><font class="redStart">*</font><font style="left:40px;">期望更新频率</font></dd>
-		<dd ><select id="frequency" style="width: 40%;"></select></dd>
-		<dd class="cut-offRule" ></dd>
-		<dd class="tital"><font class="redStart">*</font><font style="left:40px;">用途</font></dd>
-		<dd style="height: 63px;"><textarea rows="3" id="demandUse" placeholder="请输入用途"></textarea></dd>
+<!-- 		<dd class="cut-offRule" ></dd> -->
+		<dd>
+			<font class="redStart">*</font><font style="left:40px;">期望提供方式：</font>
+			<select id="accessMode" style="left:170px;width: 200px;"></select>
+			<font class="redStart" style="left:410px;">*</font><font style="left:420px;">期望共享服务方式：</font>
+			<select id="serveMode" style="width: 200px;left:590px;"></select>
+		</dd>
+<!-- 		<dd class="cut-offRule" ></dd> -->
+		<dd>
+			<font class="redStart">*</font><font style="left:40px;">期望更新频率：</font>
+			<select id="frequency" style="left:170px;width: 200px;"></select>
+		</dd>
+<!-- 		<dd class="cut-offRule" ></dd> -->
+		<dd style="height: 70px;">
+			<font style="height: 40px;" class="redStart">*</font><font style="left:40px;height: 40px;">用途：</font>
+			<textarea style="left:170px;width: 675px;" rows="3" id="demandUse" placeholder="请输入用途"></textarea>
+		</dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
 		<dd>
 			<a class="subA" href="javascript:" onclick="editApply('00');" style="position:absolute;width: 20%;">保存草稿</a>  
