匹配资源功能

--- a/SharingPlatform/src/main/webapp/views/demand/apply.html
+++ b/SharingPlatform/src/main/webapp/views/demand/apply.html
@@ -34,6 +34,9 @@
 		<div style="left:1150px;">
 			<a class="btn btn-primary" href="javascript:" onclick="importDemand();" >导入申请</a>
 		</div>
+		<div style="left:1250px;">
+			<a class="btn btn-primary" href="javascript:" onclick="matchingResAll();" >匹配资源</a>
+		</div>
 	</div>
 	<div class="gridPanel">
 	    <table id="applyGrid"></table>
