--- a/SharingPlatform/src/main/webapp/views/demand/finishVerify.html
+++ b/SharingPlatform/src/main/webapp/views/demand/finishVerify.html
@@ -1,7 +1,7 @@
 <meta name="content-type" content="text/html; charset=UTF-8">
 	
-	<script type="text/javascript" src="views/demand/demandDetail.js?v=1"></script>
-	
+	<script type="text/javascript" src="views/demand/finishVerify.js?v=1"></script>
+												    
 	<dl align="left" style="height: 30px;">
 		<dd id="page_tital" class="page_tital"></dd>
 	</dl>
@@ -9,44 +9,52 @@
     	<dd id="groud_tital" class="groud_tital">需求申请</dd>
 		<dd class="cut-offRule" ></dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">信息资源需求部门</font>
+			<font>信息资源需求部门：</font>
 			<font id="demandDepNameShow" style="left:170px;"></font>
-			<font style="width: 126px;text-align: right;left:460px;">信息资源提供部门</font>
+			<font style="left:460px;">信息资源提供部门：</font>
 			<font id="proDepNameShow" style="left:600px;"></font>
 		</dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">需求名称</font>
+			<font>需求名称：</font>
 			<font id="demandNameShow" style="left:170px;"></font>
-			<font style="width: 126px;text-align: right;left:460px;">资源匹配关键字：</font>
+			<font style="left:460px;">资源匹配关键字：</font>
 			<font id="keyWordShow" style="left:600px;"></font>
 		</dd>
 		<dd style="height: 70px;">
-			<font style="height: 50px;width: 126px;text-align: right;">需求内容<br>（须细化到数据项）</font>
+			<font style="height: 50px;">需求内容：<br>（须细化到数据项）</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;"  rows="3" id="demantDetailShow" readonly="readonly" ></textarea>
 		</dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">期望提供方式</font>
+			<font>期望提供方式：</font>
 			<font id="accessModeNameShow" style="left:170px;"></font>
-			<font style="width: 126px;text-align: right;left:460px;">期望共享服务方式：</font>
+			<font style="left:460px;">期望共享服务方式：</font>
 			<font id="serveModeNameShow" style="left:600px;"></font>
 		</dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">期望更新频率</font>
+			<font>期望更新频率：</font>
 			<font id="frequencyNameShow" style="left:170px;"></font>
 		</dd>
 		<dd style="height: 70px;">
-			<font style="height: 40px;width: 126px;text-align: right;">用途</font>
+			<font style="height: 40px;">用途：</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="demandUseShow" readonly="readonly"></textarea>
 		</dd>
 		<dd>
-			<font style="width: 126px;text-align: right;">申请人</font>
+			<font>申请人：</font>
 			<font id="createrNameShow" style="left:170px;width:200px;"></font>
-			<font style="width: 126px;text-align: right;left:460px;">申请时间：</font>
+			<font style="left:460px;">申请时间：</font>
 			<font id="saveTimeShow" style="left:600px;"></font>
 		</dd>
+		
 		<dd class="cut-offRule" id="last_cut" ></dd>
+		<dd id="groud_tital" class="groud_tital">确认完成</dd>
+		<dd class="cut-offRule" ></dd>
+		<dd style="height: 70px;">
+			<font style="height: 40px;" class="redStart"></font><font style="left:40px;height: 40px;">说明：</font>
+			<textarea style="left:130px;width: 675px;" rows="3" id="demandUse" placeholder="请输入说明"></textarea>
+		</dd>
 		<dd>
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:40% ">关闭</a>  
+		   <a class="subA" href="javascript:" onclick="submit();" style="position:absolute;width: 20%; right:60% ">提交</a> 
+			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:20% ">关闭</a>  
 		</dd>
 		<dd class="cut-offRule" ></dd>
 	</dl>
