--- a/SharingPlatform/src/main/webapp/views/demand/dockTrial.html
+++ b/SharingPlatform/src/main/webapp/views/demand/dockTrial.html
@@ -1,6 +1,6 @@
 <meta name="content-type" content="text/html; charset=UTF-8">
 	
-	<script type="text/javascript" src="views/demand/revokeDemand.js?v=1"></script>
+	<script type="text/javascript" src="views/demand/dockTrial.js?v=1"></script>
 	
 	<dl align="left" style="height: 30px;">
 		<dd id="page_tital" class="page_tital"></dd>
@@ -44,17 +44,24 @@
 			<font style="left:460px;">申请时间：</font>
 			<font id="saveTimeShow" style="left:600px;"></font>
 		</dd>
-		<dd id="rev_groud" class="groud_tital">撤销 </dd>
-		<dd style="height: 70px;">
-				<font style="height: 40px;">说明：</font>
-				<textarea style="left:170px;width: 675px;" rows="3" id="remarkRev" placeholder="请输入说明"></textarea>
-		</dd>
-		<dd class="cut-offRule" id="last_cut" ></dd>
+		
+		<dd id="groud_dock" class="groud_tital">对接人处理</dd>
+		
 		<dd>
-			<a class="subA" href="javascript:" onclick="revDem();" style="position:absolute;width: 20%; left: 20%; ">提交</a>  
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%;right: 20%;">取消</a>  
+			<font class="redStart">*</font><font style="left:40px;">处理结果</font>
+			<select id="dealResult" style="left:170px;width: 200px;"></select>
+			<font class="redStart" style="left:410px;" id="backCauseTiS">*</font><font style="left:420px;" id="backCauseTi">回退原因</font>
+			<select id="backCause" style="width: 200px;left:590px;"></select>
+		</dd>
+		
+		<dd style="height: 70px;">
+			<font style="height: 40px;">说明</font>
+			<textarea style="left:170px;width: 675px;" rows="3" id="demandUse" placeholder="请输入说明"></textarea>
+		</dd>
+		<dd class="cut-offRule" ></dd>
+		<dd>
+			<a class="subA" href="javascript:" onclick="submit();" style="position:absolute;width: 20%; left:20% ">提交</a>  
+			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:20%">取消</a>
 		</dd>
 		<dd class="cut-offRule" ></dd>
 	</dl>
-
-	
