--- a/SharingPlatform/src/main/webapp/views/demand/demandDetail.html
+++ b/SharingPlatform/src/main/webapp/views/demand/demandDetail.html
@@ -6,42 +6,42 @@
 		<dd id="page_tital" class="page_tital"></dd>
 	</dl>
     <dl align="left" style="top: 30px;border-top:0px;">
-    	<dd id="groud_tital" class="groud_tital">需求申请 <i class="chosI" onclick="shrinkStep(this,0);"></i></dd>
+    	<dd id="groud_tital" class="groud_tital">需求申请</dd>
 		<dd class="cut-offRule" ></dd>
 		<dd>
-			<font>信息资源需求部门：</font>
+			<font style="width: 126px;text-align: right;">信息资源需求部门</font>
 			<font id="demandDepNameShow" style="left:170px;"></font>
-			<font style="left:460px;">信息资源提供部门：</font>
+			<font style="width: 126px;text-align: right;left:460px;">信息资源提供部门</font>
 			<font id="proDepNameShow" style="left:600px;"></font>
 		</dd>
 		<dd>
-			<font>需求名称：</font>
+			<font style="width: 126px;text-align: right;">需求名称</font>
 			<font id="demandNameShow" style="left:170px;"></font>
-			<font style="left:460px;">资源匹配关键字：</font>
+			<font style="width: 126px;text-align: right;left:460px;">资源匹配关键字：</font>
 			<font id="keyWordShow" style="left:600px;"></font>
 		</dd>
 		<dd style="height: 70px;">
-			<font style="height: 50px;">需求内容：<br>（须细化到数据项）</font>
+			<font style="height: 50px;width: 126px;text-align: right;">需求内容<br>（须细化到数据项）</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;"  rows="3" id="demantDetailShow" readonly="readonly" ></textarea>
 		</dd>
 		<dd>
-			<font>期望提供方式：</font>
+			<font style="width: 126px;text-align: right;">期望提供方式</font>
 			<font id="accessModeNameShow" style="left:170px;"></font>
-			<font style="left:460px;">期望共享服务方式：</font>
+			<font style="width: 126px;text-align: right;left:460px;">期望共享服务方式：</font>
 			<font id="serveModeNameShow" style="left:600px;"></font>
 		</dd>
 		<dd>
-			<font>期望更新频率：</font>
+			<font style="width: 126px;text-align: right;">期望更新频率</font>
 			<font id="frequencyNameShow" style="left:170px;"></font>
 		</dd>
 		<dd style="height: 70px;">
-			<font style="height: 40px;">用途：</font>
+			<font style="height: 40px;width: 126px;text-align: right;">用途</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="demandUseShow" readonly="readonly"></textarea>
 		</dd>
 		<dd>
-			<font>申请人：</font>
+			<font style="width: 126px;text-align: right;">申请人</font>
 			<font id="createrNameShow" style="left:170px;width:200px;"></font>
-			<font style="left:460px;">申请时间：</font>
+			<font style="width: 126px;text-align: right;left:460px;">申请时间：</font>
 			<font id="saveTimeShow" style="left:600px;"></font>
 		</dd>
 		<dd class="cut-offRule" id="last_cut" ></dd>
