--- a/SharingPlatform/src/main/webapp/views/demand/dockTrial.html
+++ b/SharingPlatform/src/main/webapp/views/demand/dockTrial.html
@@ -8,68 +8,60 @@
     <dl align="left" style="top: 30px;border-top:0px;">
     	<dd id="groud_tital" class="groud_tital">需求申请</dd>
 		<dd class="cut-offRule" ></dd>
-		<dd class="tital">
+		<dd>
 			<font>信息资源需求部门：</font>
-			<font id="demandDepNameShow"  style="left:170px;"/></font>			
+			<font id="demandDepNameShow" style="left:170px;"></font>
 			<font style="left:460px;">信息资源提供部门：</font>
-			<font id="proDepNameShow"  style="left:600px;"/></font>
+			<font id="proDepNameShow" style="left:600px;"></font>
 		</dd>
-
-		<dd class="tital">
-			<font>需求名称</font>
-			<font id="demandNameShow"  style="left:170px;"/></font>
-			<font style="left:460px;">资源匹配关键字</font>
-			<font id="keyWordShow"  style="left:600px;"/></font>
+		<dd>
+			<font>需求名称：</font>
+			<font id="demandNameShow" style="left:170px;"></font>
+			<font style="left:460px;">资源匹配关键字：</font>
+			<font id="keyWordShow" style="left:600px;"></font>
 		</dd>
-		
 		<dd style="height: 70px;">
 			<font style="height: 50px;">需求内容：<br>（须细化到数据项）</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;"  rows="3" id="demantDetailShow" readonly="readonly" ></textarea>
 		</dd>
-				
 		<dd>
 			<font>期望提供方式：</font>
 			<font id="accessModeNameShow" style="left:170px;"></font>
 			<font style="left:460px;">期望共享服务方式：</font>
 			<font id="serveModeNameShow" style="left:600px;"></font>
 		</dd>
-		
 		<dd>
 			<font>期望更新频率：</font>
 			<font id="frequencyNameShow" style="left:170px;"></font>
 		</dd>
-				
 		<dd style="height: 70px;">
 			<font style="height: 40px;">用途：</font>
 			<textarea class="textareaShow" style="left:170px;width: 675px;" rows="3" id="demandUseShow" readonly="readonly"></textarea>
 		</dd>
-		
 		<dd>
 			<font>申请人：</font>
 			<font id="createrNameShow" style="left:170px;width:200px;"></font>
 			<font style="left:460px;">申请时间：</font>
 			<font id="saveTimeShow" style="left:600px;"></font>
 		</dd>
-				
-		<dd class="cut-offRule" id="last_cut" ></dd>
 		
-		<dd id="groud_tital" class="groud_tital">对接人处理</dd>
-		<dd class="cut-offRule" ></dd>
-		
-		<dd class="tital">
-			<font class="redStart">*</font><font style="left:40px;">处理结果</font>
-			<font style="left:340px;" id="backCauseTi">回退原因</font>
-		</dd>
-				<dd ><select id="dealResult" style="width: 40%;"></select>
-				<select id="backCause" style="position:absolute;width: 40%;left:330px;"></select></dd>
-		<dd class="cut-offRule" ></dd>
-
-		<dd class="tital"><font class="redStart"></font><font style="left:40px;">说明</font></dd>
-		<dd style="height: 63px;"><textarea rows="3" id="demandUse" placeholder="请输入说明"></textarea></dd>
-		<dd class="cut-offRule" id="last_cut" ></dd>
+		<dd id="groud_dock" class="groud_tital">对接人处理</dd>
 		
 		<dd>
-			<a class="subA" href="javascript:" onclick="submit();" style="position:absolute;width: 20%; right:20% ">提交</a>  
-			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:60%">取消</a>
+			<font class="redStart">*</font><font style="left:40px;">处理结果</font>
+			<select id="dealResult" style="left:170px;width: 200px;"></select>
+			<font class="redStart" style="left:410px;" id="backCauseTiS">*</font><font style="left:420px;" id="backCauseTi">回退原因</font>
+			<select id="backCause" style="width: 200px;left:590px;"></select>
 		</dd>
+		
+		<dd style="height: 70px;">
+			<font style="height: 40px;">说明</font>
+			<textarea style="left:170px;width: 675px;" rows="3" id="demandUse" placeholder="请输入说明"></textarea>
+		</dd>
+		<dd class="cut-offRule" ></dd>
+		<dd>
+			<a class="subA" href="javascript:" onclick="submit();" style="position:absolute;width: 20%; left:20% ">提交</a>  
+			<a class="subA" href="javascript:" onclick="cancelPopup();" style="position:absolute;width: 20%; right:20%">取消</a>
+		</dd>
+		<dd class="cut-offRule" ></dd>
 	</dl>
