--- a/SharingPlatform/src/main/webapp/views/demand/provide.html
+++ b/SharingPlatform/src/main/webapp/views/demand/provide.html
@@ -5,34 +5,40 @@
 
 <div class="showList" style='height:100px;'>
 	<div class="screen">
-	<div style="left:0px;width: 150px;">信息资源需求部门：</div>
-		<div style="left:150px;width: 220px;">
-			<input id="ft_needDepId" style="width:200px;display:none;"readonly="readonly" placeholder="请选择部门"/>
-			<input id="ft_needDepName" style="width:200px;"readonly="readonly" placeholder="请选择部门"/>
+		<div style="left:20px;width: 200px;">
+			<input id="pro_keyWordByList" style="width:200px;" placeholder="请输入关键字"/>
+		</div>
+<!-- 	<div style="left:0px;width: 150px;">信息资源需求部门：</div> -->
+		<div style="left:230px;width: 200px;">
+			<input id="pro_needDepId" style="width:200px;display:none;"readonly="readonly" placeholder="请选择信息资源需求部门"/>
+			<input id="pro_needDepName" style="width:200px;"readonly="readonly" placeholder="请选择信息资源需求部门"/>
 		</div>
 		
-		<div style="left:390px;width: 60px;">状态：</div>
-		<div style="left:450px;"><select id="ft_state" name="ft_state"></select></div>
+<!-- 		<div style="left:390px;width: 60px;">状态：</div> -->
+		<div style="left:440px;width: 130px;"><select id="pro_state" name="ft_state" style="width: 130px;"></select></div>
 		
-		<div style="left:580px;width: 150px;"><select id="ft_timeType" name="ft_timeType" style="width:140px;"></select></div>
+		<div style="left:580px;width: 140px;"><select id="pro_timeType" name="ft_timeType" style="width:140px;"></select></div>
 		
-		<div style="left:730px;width:110px;">
-			<input id="ft_stratDate" name="ft_stratDate" class="Wdate" readonly="readonly"/>
+		<div style="left:730px;width:100px;">
+			<input id="pro_stratDate" name="ft_stratDate" style="width: 100px;" class="Wdate" readonly="readonly"/>
 		</div>
-		<div style="left:830px;width:30px;">
+		<div style="left:830px;width:25px;">
 			至
 		</div>
-		<div style="left:850px;width:110px;">
-			<input id="ft_endDate" name="ft_endDate" class="Wdate" readonly="readonly"/>
+		<div style="left:855px;width:100px;">
+			<input id="pro_endDate" name="ft_endDate" style="width: 100px;" class="Wdate" readonly="readonly"/>
 		</div>
-		<div style="left:950px;width:200px;">
-			<a class="btn btn-primary" href="javascript:" onclick="searchTrial();" ><i class="fa fa-plus"></i>搜  索</a>
+		<div style="left:965px;width:60px;">
+			<a class="srcBut" href="javascript:" onclick="searchPro();" >查询</a>
+		</div>
+		<div style="left:1035px;width:60px;">
+			<a class="resetBut" href="javascript:" onclick="resetPro();" >重置</a>
 		</div>
 
 	</div>
 	<div class="gridPanel">
-	    <table id="ft_applyGrid"></table>
-	    <div id="ft_applyGridPager"></div>
+	    <table id="pro_applyGrid"></table>
+	    <div id="pro_applyGridPager"></div>
     </div>
   </div>
 
